Fix issue on iOS with slider wrapping

--- a/src/Menubar.css
+++ b/src/Menubar.css
@@ -9,7 +9,6 @@
 .Menubar-content {
   display: flex;
   padding: 10px;
-  flex-wrap: wrap;
   flex-direction: column;
 }
 
